# food-predictor

./: Dockerfile  api.py  calorie.csv  crea dataset calorie.py  desktop.ini  dummy.txt  import sys.py  model.py  pyproject.toml  requirements.txt  streamlit_app.py  user_tracking.csv
